tests/baselines/reference/tsxAttributeResolution4.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
file.tsx(15,26): error TS2339: Property 'len' does not exist on type 'string'.


==== file.tsx (2 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		test1: Attribs1;
    	}
    }
    interface Attribs1 {
    	x(n: string): void;
    }
    
    // OK
    <test1 {... {x: (n) => 0} } />;
    
    // Error, no member 'len' on 'string'
    <test1 {... {x: (n) => n.len} } />;
                             ~~~
!!! error TS2339: Property 'len' does not exist on type 'string'.
    